--- a/week1/Portfolio/index.html
+++ b/week1/Portfolio/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Giang Hiep, portfolio, Hiep's, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
-    <meta name="description" content="Welcome to Hiep's Portfolio. Full-Stack Web Developer and Android App Developer" />
+    <meta name="keywords" content="Long Trinh, portfolio, Long's, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
+    <meta name="description" content="Welcome to Long's Portfolio. Full-Stack Web Developer and Android App Developer" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="Prf.css">
+    <link rel="stylesheet" href="/week1/Portfolio/Prf.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="../IMAGE/contact.png" type="image/x-png">
+    <link id='favicon' rel="shortcut icon" href="/week1/IMAGE/contact.png" type="image/x-png">
     <title>Portfolio | Long Trịnh</title>
 </head>
 <body oncontextmenu="return false">
@@ -142,7 +142,7 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="../IMAGE/vnu.png" alt="">
+        <img draggable="false" src="/week1/IMAGE/vnu.png" alt="">
         </div>
         <div class="content">
         <h3>Bachelor of Management Information Systems (MIS)</h3>
@@ -289,7 +289,7 @@
   <div class="container">
     <div class="content">
       <div class="image-box">
-        <img draggable="false" src="../IMAGE/contact1.png" alt="">
+        <img draggable="false" src="/week1/IMAGE/contact1.png" alt="">
       </div>
     <form id="contact-form">
       
@@ -393,7 +393,7 @@
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
-<script src="Prf.js"></script>
-
+<script src="/week1/Portfolio/Prf.js"></script>
+<!-- ==== Testlai ==== -->
 </body>
 </html>
