--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Long Trinh, portfolio, Long's, full stack dev, personal portfolio lifecodes, portfolio design, portfolio website, personal portfolio" />
     <meta name="description" content="Welcome to Long's Portfolio. Full-Stack Web Developer and Android App Developer" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/week1/Portfolio/Prf.css">
+    <link rel="stylesheet" href="/Prf.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
@@ -393,7 +393,7 @@
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS ENDS ==== -->
 
-<script src="/week1/Portfolio/Prf.js"></script>
+<script src="/Prf.js"></script>
 <!-- ==== Testlai ==== -->
 </body>
 </html>
