--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi There,<br/> I'm Giang <span>Hiệp</span></h2>
+    <h2>Hi There,<br/> I'm Long <span>Trịnh</span></h2>
     <p>I am into <span class="typing-text"></span></p>
     <a href="#about" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
@@ -328,7 +328,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Hiep's Portfolio</h3>
+          <h3>Long's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
@@ -344,21 +344,21 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>0374140705</p>
-          <p> <i class="fas fa-envelope"></i>23070691@vnu.edu.vn</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Hung Yen, Vietnam</p>
+          <p> <i class="fas fa-phone"></i>0909600700</p>
+          <p> <i class="fas fa-envelope"></i>23070493@vnu.edu.vn</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Hà Nội, Vietnam</p>
           <div class="share">
 
               <a href="" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/gianghiep2k5/INS306401-INS3064_GiangLeHiep" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
-              <a href="mailto:23070691@vnu.edu.vn" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
+              <a href="https://github.com/23070493-source/INS306401-INS3064_TrinhNhuLong" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="mailto:23070493@vnu.edu.vn" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
               <a href="" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
               <a href="" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="#"> Giang Hiệp</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="#"> Long Trinh</a></h1>
 
 </section>
 <!-- footer section ends -->
