--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,7 +23,7 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="#home" class="logo"><i class="fab fa-node-js"></i> Hiệp</a>
+        <a href="#home" class="logo"><i class="fab fa-node-js"></i> Long</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
